fix: out of place pagination icon

--- a/components/AdvancedPagination/dropdownstyles.css
+++ b/components/AdvancedPagination/dropdownstyles.css
@@ -15,6 +15,7 @@
     width: 100%;
     position: relative;
     border: 1px solid #D6D6D6;
+    box-sizing: content-box;
 }
 
 .dropDownRoot > div :first-child {
@@ -24,7 +25,7 @@
 .dropdownWrap div {
     padding: 0 !important;
     margin: 0 !important;
-    line-height: 21px !important;
+    line-height: 19px !important;
     border: none !important;
     color: #595959 !important;
     text-align: left !important;
@@ -37,23 +38,22 @@
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    padding-left: 10px !important;
+    padding: 1px 29px 1px 10px !important;
     display: flex;
 }
 .dropDownRoot > div:first-child {
     flex-grow: 10;
 }
-
+.dropdownIconWrap {
+    position: absolute;
+    top: 0;
+    right: 1px;
+}
+.dropdownIconWrap svg,
 .dropdownIconBackground svg { /* pass over material ui styling limitations */
     background-color: var(--ut-front-react-standardPaginationBackgroundActiveColor);
-    top: 1px !important;
-    right: 1px !important;
-    height: 20px !important;
-}
-.dropdownIconWrap svg{
     height: 19px !important;
     width: 19px !important;
-    position: absolute;
 }
 .dropdownMenu {
     display: block !important;
@@ -66,11 +66,6 @@
     display: flex !important;
     align-items: center;
     min-height: 32px !important;
-}
-.dropdownIconWrap svg{
-    height: 19px !important;
-    width: 19px !important;
-    position: absolute;
 }
 .dropdownMenu {
     display: block !important;
